Enable scrolling in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,7 @@ bind -n M-Down select-pane -D
 # insure correct terminal color
 set -g default-terminal "xterm-256color" 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+#mouse scroll
+set -g mouse on 
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
