--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,3 +22,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 #mouse scroll
 set -g mouse on 
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+set-option -g set-clipboard external 
+set-option -g mouse on            
+set-window-option -g mode-keys vi      
