--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,3 +26,4 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-option -g set-clipboard external 
 set-option -g mouse on            
 set-window-option -g mode-keys vi      
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
